# tasks

./: .dockerignore  .gcloudignore  .gitignore  .pluscoder-config.yml  Dockerfile  Makefile  README.md  cloudbuild.yaml  main.py  requirements-dev.txt  requirements.txt
api/: .dockerignore  .gcloudignore  Dockerfile  Makefile  cloudbuild.yaml  requirements.txt
api/.emulator/: docker-compose.yml  firebase.json  populate.py
api/app/: db.py  main.py  models.py  schema_validation.py  tasks.py
infrastructure/: README.md  main.tf  outputs.tf  variables.tf
infrastructure/push_feature_request/: main.py
infrastructure/workflow_trigger/: main.py  requirements.txt
server/: Dockerfile  Makefile
server/.emulator/: populate.py
server/app/: config.py  db.py  main.py  models.py  schema_validation.py  tasks.py
tasks/: cloudbuild.yaml
tasks/core/: .dockerignore  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Makefile  README.md  cloudbuild.yaml  entrypoint.sh  pyproject.toml  requirements.txt
tasks/core/tasks/: __init__.py  config.py  (+6 more)
tasks/hello-world/: .gcloudignore  Dockerfile  Makefile  cloudbuild.yaml  pyproject.toml  requirements.txt
tasks/hello-world/hello_world/: __init__.py  main.py
tasks/speech-recognition/: Dockerfile  Makefile  cloudbuild.yaml  pyproject.toml  requirements.txt
tasks/whisperx/: .dockerignore  Dockerfile  Makefile  cloudbuild.yaml  pyproject.toml  requirements.txt
tests/: test_git_tasks.py  test_utility_tasks.py
workflows/: __init__.py  __main__.py  core.py  hello_world.py
workflows/tasks/: git.py  pluscoder.py  utility.py  utils.py
(+17 files in other folders)
