[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tasks-whisperx"
version = "0.1.0"
description = "Speech recognition and spearker diarization tasks with WhisperX"
requires-python = ">=3.10"
authors = [
    { name = "Sebastián Bórquez", email = "sebastian.borquez.g@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["workflows", "tasks", "core"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["whisperx"]
package-dir = {"" = "."}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}